2008-03-10  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot.doc: Fix typos.

2008-03-08  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: Update section on plot styles to include circles
	and to separate out the plot styles affected by "set style fill".

2008-03-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_gets): Revert patch of 2008-02-22 because testing
	for "if (interactive)" is not a sufficient guarantee that it is safe to
	call readline();   Example:  "load foo" where "foo" contains a plot
	command with inline data (readline() tries to read from the terminal,
	not the file).  Thanks to Ralf Juengling for analysing the problem.

2008-03-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/wxterminal/gp_cairo.c src/wxterminal/gp_cairo.h
	src/wxterminal/wxt_gui.cpp:  Treated dotted lines (LT_AXIS) differently
	from the general cycle of dash patterns.

	* term/cairo.trm: Scale dashlength down by a factor of 2 for pdfcairo.

2008-03-06  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary): Handle the case of a fixed aspect ratio and
	fixed plot margins. Fixed left margin takes precedence over right. Fixed
	bottom margin takes precedence over top. If no margins are fixed, center
	the plot.

2008-03-04  Ethan A Merritt  <merritt@u.washington.edu>

	* term/fig.trm (FIG_layer): We don't know a true bounding box at the
	time a new plot is started, but fig2dev insists that some numbers be
	present; give it the bounding box of the full plot.
	Bug #1906855

	* src/graph3d.c (draw3d_graph_box):  Turn off clipping while drawing
	the border + ticks, since we don't want to clip "out" ticks.
	Bug #1906933

2008-03-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/color.c (draw_color_smooth_box) src/unset.c (unset_axislabel):
	Allow user to set colorbar label rotatation if the bar is vertical.

	* term/cgm.trm:  Adjust palette size based on actual number of
	color slots remaining in the table.
